@@ -3,6 +3,7 @@
 * Fixed layer offsets missing in the Lua export
 * Fixed JSON tileset format missing in 'Add External Tileset' action
 * Fixed language selection entries for Portuguese
+* Fixed an issue with copy/pasting when using image collection tilesets
 * Updated Brazilian Portuguese translation
 
 0.14.1 (28 September 2015)
